@@ -20,8 +20,6 @@ The following overview was initially collected 20100726 based
 on the header of the respective files and since then updated
 as changes were applied:
 
-base/CMakeLists.txt: GPLv2+
-
 misc/arglists.[c|h]: LGPLv2+
 misc/bpf_share.c: GPLv2
 misc/bpf_share.h: LGPLv2+
